removed dist, added typescript-gulp to package.json

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,8 +2,7 @@
   "compilerOptions": {
     "target": "es6",
     "module": "commonjs",
-    "outDir": "dst",
-    "moduleResolution": "node"
+    "outDir": "dist"
   },
   "include": [
     "src/**/*.ts"
