--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/mocha": "^2.2.42",
     "chai": "^4.1.1",
     "gulp": "^3.9.1",
+    "gulp-typescript": "^3.2.2",
     "mocha": "^3.5.0",
     "ts-node": "^3.3.0",
     "typescript": "^2.4.2",
