--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "mocha -r ts-node/register src/**/*.spec.ts",
-    "e2e": "node dist/services/e2e.js"
+    "e2e": "node dist/services/e2e.js",
+    "start": "node dist/index.js"
   },
   "author": "",
   "license": "ISC",
