--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@types/node": "^8.0.25",
     "moment": "^2.18.1",
     "tplink-lightbulb": "^1.1.7",
+    "unofficial-nest-api": "^0.1.4",
     "wemo-client": "^0.13.0"
   }
 }
